# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
app_33/: admin.py  apps.py  permissions.py  views.py
app_33/migrations/: 0001_initial.py
project_33/: asgi.py  settings.py  urls.py  wsgi.py
project_33/project_33/: settings.py  urls.py
